ładuje quizy z bazy dnaych - mozna rozwiazywac